# psh

./: .gitignore  Cargo.toml  README.md  psh.md
psh/: Cargo.toml
psh/src/: ai.rs  config.rs  context.rs  pty.rs
src/: ai.rs  config.rs  context.rs  main.rs  pty.rs
