[package]
name = "psh"
version = "0.1.0"
edition = "2024"

[dependencies]
portable-pty = "0.8"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
crossterm = "0.27"
